--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -18,7 +18,7 @@
       width: 100%;
       height: 100%;
       position: relative;
-      display: none; /* Hidden until password success */
+      display: block; /* Always visible now */
     }
 
     .flipper {
@@ -63,145 +63,10 @@
       border-bottom: 2px solid #00ffcc;
       z-index: 2;
     }
-
-    /* Password Prompt Overlay */
-    .prompt-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.85);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
-
-    .prompt-box {
-      background: #111;
-      border: 2px solid #00ffcc;
-      border-radius: 8px;
-      padding: 20px;
-      width: 320px;
-      text-align: center;
-      color: #00ffcc;
-      box-shadow: 0 0 30px rgba(0,255,204,0.2);
-    }
-
-    .prompt-box p {
-      font-size: 1rem;
-      margin-bottom: 10px;
-    }
-
-    .prompt-input {
-      width: 90%;
-      padding: 8px;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #00ffcc;
-      background: black;
-      color: #00ffcc;
-      text-align: center;
-      outline: none;
-    }
-
-    .prompt-btn {
-      margin-top: 12px;
-      padding: 6px 14px;
-      border: none;
-      background: #003333;
-      color: #00ffcc;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    .prompt-btn:hover { background: #004d4d; }
   </style>
-
-  <script>
-    const correctPassword = "Beibora@2025";
-    const storageKey = "auth_beibora";
-    const expiryHours = 12; // password validity duration
-
-    function getAuthData() {
-      try {
-        return JSON.parse(localStorage.getItem(storageKey));
-      } catch {
-        return null;
-      }
-    }
-
-    function isPageReload() {
-      const nav = performance.getEntriesByType("navigation")[0];
-      if (nav) return nav.type === "reload";
-      return performance.navigation.type === 1; // fallback
-    }
-
-    function passwordPrompt(message) {
-      return new Promise((resolve) => {
-        const overlay = document.createElement("div");
-        overlay.className = "prompt-overlay";
-
-        const box = document.createElement("div");
-        box.className = "prompt-box";
-        box.innerHTML = `
-          <p>${message}</p>
-          <input type="password" class="prompt-input" id="pwInput" placeholder="Enter password" />
-          <br>
-          <button class="prompt-btn" id="pwOk">OK</button>
-        `;
-        overlay.appendChild(box);
-        document.body.appendChild(overlay);
-
-        const input = box.querySelector("#pwInput");
-        const btn = box.querySelector("#pwOk");
-        input.focus();
-
-        btn.onclick = () => {
-          const value = input.value.trim();
-          overlay.remove();
-          resolve(value);
-        };
-
-        input.addEventListener("keydown", (e) => {
-          if (e.key === "Enter") btn.click();
-        });
-      });
-    }
-
-    async function authenticate() {
-      const auth = getAuthData();
-      const reloaded = isPageReload();
-      const now = Date.now();
-
-      let needsPassword = false;
-
-      if (!auth) {
-        needsPassword = true; // first-time load
-      } else if ((now - auth.timestamp) > expiryHours * 60 * 60 * 1000) {
-        needsPassword = true; // expired
-        localStorage.removeItem(storageKey);
-      } else if (!reloaded && !auth) {
-        needsPassword = true;
-      }
-
-      if (needsPassword) {
-        const password = await passwordPrompt("Enter password to access Beibora Dashboard:");
-        if (password !== correctPassword) {
-          alert("Incorrect password. Access denied.");
-          window.location.href = "about:blank";
-          throw new Error("Unauthorized");
-        }
-        localStorage.setItem(storageKey, JSON.stringify({ timestamp: now }));
-      }
-
-      document.querySelector(".flip-container").style.display = "block";
-    }
-
-    window.addEventListener("DOMContentLoaded", authenticate);
-  </script>
 </head>
 
 <body>
-  <!-- Hidden until password success -->
   <div class="flip-container">
     <div class="flipper" id="flipper">
       <div class="front">
@@ -253,4 +118,3 @@
   </script>
 </body>
 </html>
-
